[package]
name = "rchidrun"
version = "0.1.0"
edition = "2023 "
description = "A unified compiler CLI for running scripts with WebAssembly SDKs"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
wasmtime = "12.0"
wasmtime-wasi = "12.0"